--- a/apps/savy/tsconfig.json
+++ b/apps/savy/tsconfig.json
@@ -2,6 +2,14 @@
   "extends": "../../tsconfig.base.json",
   "files": [],
   "include": [],
+  "compilerOptions": {
+    "baseUrl": "../../",
+    "paths": {
+      "@core/*": ["apps/savy/src/app/core/*"],
+      "@modules/*": ["apps/savy/src/app/modules/*"],
+      "@environment": ["apps/savy/src/environments/environment.ts"]
+    }
+  },
   "references": [
     {
       "path": "./tsconfig.app.json"
