--- a/package.json
+++ b/package.json
@@ -9,8 +9,28 @@
   },
   "private": true,
   "dependencies": {
+    "@types/http-errors": "^1.8.2",
+    "class-validator": "^0.13.2",
+    "compression": "^1.7.4",
+    "connect-typeorm": "^2.0.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
-    "tslib": "^2.3.0"
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^6.6.0",
+    "express-session": "^1.17.3",
+    "helmet": "^6.0.0",
+    "hpp": "^0.2.3",
+    "http-errors": "^2.0.0",
+    "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
+    "passport": "^0.6.0",
+    "tslib": "^2.3.0",
+    "tsyringe": "^4.7.0",
+    "typedi": "^0.10.0",
+    "typeorm": "^0.3.9",
+    "util": "^0.12.4",
+    "winston": "^3.8.2",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "@nrwl/cli": "14.6.4",
@@ -21,8 +41,12 @@
     "@nrwl/node": "14.6.4",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/workspace": "14.6.4",
+    "@types/compression": "^1.7.2",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "4.17.13",
+    "@types/hpp": "^0.2.2",
     "@types/jest": "28.1.1",
+    "@types/morgan": "^1.9.3",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "~5.33.1",
     "@typescript-eslint/parser": "~5.33.1",
