--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
   },
   "private": true,
   "dependencies": {
+    "@types/connect-flash": "^0.0.37",
     "@types/http-errors": "^1.8.2",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "compression": "^1.7.4",
+    "connect-flash": "^0.1.1",
     "connect-typeorm": "^2.0.0",
     "cookie-parser": "^1.4.6",
+    "es6-shim": "^0.35.6",
     "express": "^4.18.1",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^6.6.0",
@@ -24,6 +29,10 @@
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "reflect-metadata": "^0.1.13",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.5.0",
     "tslib": "^2.3.0",
     "tsyringe": "^4.7.0",
     "typedi": "^0.10.0",
@@ -48,6 +57,8 @@
     "@types/jest": "28.1.1",
     "@types/morgan": "^1.9.3",
     "@types/node": "16.11.7",
+    "@types/passport-local": "^1.0.34",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "~5.33.1",
     "@typescript-eslint/parser": "~5.33.1",
     "eslint": "~8.15.0",
