--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "helmet": "^6.0.0",
     "hpp": "^0.2.3",
     "http-errors": "^2.0.0",
+    "http-status-codes": "^2.2.0",
+    "install": "^0.13.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
@@ -50,12 +53,14 @@
     "@nrwl/node": "14.6.4",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/workspace": "14.6.4",
+    "@types/body-parser": "^1.19.2",
     "@types/compression": "^1.7.2",
     "@types/cookie-parser": "^1.4.3",
-    "@types/express": "4.17.13",
+    "@types/express": "^4.17.13",
     "@types/hpp": "^0.2.2",
     "@types/jest": "28.1.1",
     "@types/morgan": "^1.9.3",
+    "@types/multer": "^1.4.7",
     "@types/node": "16.11.7",
     "@types/passport-local": "^1.0.34",
     "@types/swagger-ui-express": "^4.1.3",
